--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -1,9 +1,12 @@
 .root {
   @apply grid gap-0 grid-cols-3 grid-rows-2;
+}
 
-  & > * {
-    @apply row-span-1 overflow-hidden;
-    height: 500px;
-    max-height: 800px;
+.root > * {
+  @apply row-span-1 overflow-hidden;
+  max-height: 800px;
+
+  @screen lg {
+    height: inherit;
   }
 }
