--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -11,8 +11,11 @@
   }
 }
 
-.layoutA {
-  color: red;
+.layoutA > *:nth-child(6n + 1),
+.layout > *:nth-child(6n + 5) {
+  /* 1, 7, 13 */
+  /* 5, 11, 17 */
+  @apply lg:col-span-2 lg:row-span-2;
 }
 
 .layoutB {
