--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -1,6 +1,17 @@
 .root {
   @apply relative;
 }
+.root:nth-child(6n + 1) .productBg {
+  @apply bg-violet;
+}
+.root:nth-child(6n + 3) .productBg {
+  @apply bg-pink;
+}
+
+.productBg {
+  @apply absolute inset-0 z-0;
+  background-color: #212529;
+}
 
 .productTag {
   @apply absolute top-0 left-0 z-20;
