--- a/components/ui/Marquee/Marquee.module.css
+++ b/components/ui/Marquee/Marquee.module.css
@@ -1,3 +1,10 @@
 .root {
-  @apply bg-rose-500;
+  @apply relative;
+}
+
+.container {
+  @apply flex flex-row;
+}
+.container > * {
+  @apply flex-1 px-16 py-4 relative;
 }
