--- a/components/common/Usernav/Usernav.module.css
+++ b/components/common/Usernav/Usernav.module.css
@@ -3,5 +3,5 @@
 }
 
 .item {
-  @apply mr-6 cursor-pointer transition flex items-center outline-none text-primary hover:text-accents-6 hover:transition hover:scale-110 hover:duration-100;
+  @apply mr-6 cursor-pointer transition flex items-center outline-none text-primary hover:text-accents-6 hover:scale-110;
 }
