--- a/components/product/ProductView/ProductView.module.css
+++ b/components/product/ProductView/ProductView.module.css
@@ -3,22 +3,8 @@
 }
 
 .productDisplay {
-  @apply relative flex px-0 pb-0 box-border col-span-1 bg-violet;
+  @apply relative flex px-0 pb-0 box-border col-span-1 bg-violet md:min-h-[700px] lg:-mr-8 lg:-ml-8 lg:mx-0 lg:col-span-6 lg:min-h-full lg:h-full;
   min-height: 600px;
-
-  @media (min-width: 768px) {
-    min-height: 700px;
-  }
-
-  @media (min-width: 1024px) {
-    margin-right: -2rem;
-    margin-left: -2rem;
-    margin-left: 0px;
-    margin-right: 0px;
-    grid-column: span 6 / span 6;
-    min-height: 100%;
-    height: 100%;
-  }
 }
 
 .squareBg {
@@ -57,13 +43,10 @@
 }
 
 .button {
+  @apply sm:min-w-[300px];
   text-align: center;
   width: 100%;
   max-width: 300px;
-
-  @media (min-width: 640px) {
-    min-width: 300px;
-  }
 }
 
 .wishlistButton {
